--- a/style.css
+++ b/style.css
@@ -1,11 +1,50 @@
-nav > li{
-    list-style: none;
-    display: inline;
-    padding: 1rem;
+* {
+    box-sizing: border-box;
 }
 
 body {
+    font-family: "poppins";
+    margin: 0;
+    padding: 0;
+}
+
+.navbar {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background-color: #031a1c;
+    color: #f1fdfe;
+}
+
+.logo {
+    font-size: 1.5rem;
+    margin: .5rem;
+}
+
+.navbar-links ul{
+    margin: 0;
+    padding: 0;
+    display: flex;
+}
+
+.navbar-links li{
+    list-style: none;
+}
+
+.navbar-links li a {
+    text-decoration: none;
+    color: #f1fdfe;
+    padding: 1rem;
+    display: block;
+}
+
+.navbar-links li a:hover{
+    opacity: 0.6;
+    transition: ease-in 0.3s;
+}
+
+/* body {
     background-color: #031a1c;
     color: #f1fdfe;
     font-family: "poppins";
-}
+} */
