--- a/style.css
+++ b/style.css
@@ -3,17 +3,19 @@
 }
 
 body {
+    background-color: #031a1c;
+    color:#f1fdfe;
     font-family: "poppins";
     margin: 0;
     padding: 0;
 }
 
 .navbar {
+    background-color: #031a1c;
+    color: #f1fdfe;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background-color: #031a1c;
-    color: #f1fdfe;
 }
 
 .logo {
@@ -43,8 +45,56 @@ body {
     transition: ease-in 0.3s;
 }
 
-/* body {
-    background-color: #031a1c;
-    color: #f1fdfe;
-    font-family: "poppins";
-} */
+.toggle-button {
+    position: absolute;
+    top: 0.75rem;
+    right: 1rem;
+    display: none;
+    flex-direction: column;
+    justify-content: space-between;
+    width: 31px;
+    height: 21px;
+    opacity: 0.6;
+}
+
+.toggle-button .bar {
+    height: 3px;
+    width: 100%;
+    background-color: #f1fdfe;
+}
+
+@media (max-width: 600px){
+    .toggle-button {
+        display: flex;
+    }
+    .navbar-links {
+        display: none;
+        width: 100%;
+    }
+
+    .navbar {
+        flex-direction: column;
+        align-items: flex-start;
+    }
+
+    .navbar-links ul {
+        width: 100%;
+        flex-direction: column;
+    }
+
+    .navbar-links li {
+        text-align: center;
+    }
+
+    .navbar-links li:hover {
+        background-color: #58e2ee;
+    }
+
+    .navbar-links li a {
+        padding: .5rem 1rem;
+    }
+
+    .navbar-links.active {
+        display: flex;
+    }
+}
